test/sync-configmaps/hello-configmap-generated.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: hello
  namespace: hello-world
data:
  hello: world
